--- a/templates/address.html
+++ b/templates/address.html
@@ -63,7 +63,7 @@
                         <div class="addr-opration addr-default" v-if="item.isDefault">默认地址</div>
                     </li>
 
-                    <li class="addr-new">
+                    <li class="addr-new" >
                         <div class="add-new-inner">
                             <i class="icon-add">
                                 <svg class="icon icon-add"><use xlink:href="#icon-add"></use></svg>
@@ -116,4 +116,4 @@
 </html>
 <script src="/static/js/vue2.min.js"></script>
 <script src="/static/js/vue-resource.min.js"></script>
-{#<script src="/static/js/address.js"></script>#}
+<script src="/static/js/address.js"></script>
