--- a/templates/cart.html
+++ b/templates/cart.html
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="cart">
             <div class="checkout-title">
-                <span>购物车实例</span>
+                <span>购物车</span>
             </div>
 
             <!--商品信息-->
@@ -68,143 +68,161 @@
                             <li>总金额</li>
                             <li>编辑</li>
                         </ul>
+                        <ul>
+                            <li>{{ num }}</li>
+                            <li>{{ price }}</li>
+                            <li>{{ num }}</li>
+                            <li>{{ sum }}</li>
+                            <li><a href="">修改</li>
+                        </ul>
                     </div>
-{#                    <!--商品列表信息-->#}
-{##}
-{#                    <ul class="cart-item-list">#}
-{#                        <li v-for="(item,index) in productList"> <!--item of productList 这两个是一样的-->#}
-{#                            <!--#}
-{#                            这块的 index 是让自己知道#}
-{#                            这块的index 是表示索引的值 和 js原声的 forEach(function(value,index){ }) 是一样的#}
-{#                            jq的 $.each(function(index ,value ){ }) 和它们是相反的#}
-{#                            -->#}
-{#                            <div class="cart-tab-1">#}
-{#                                <div class="cart-item-check">#}
-{#                                    <!--v-bind:class="" 里面一定是 一个对象或者是数组的形式#}
-{#                                     v-bind:class="{ }"  v-bind:class="[ ]"#}
-{#                                     -->#}
-{#                                    <a href="javascript:;" class="item-check-btn" v-bind:class="{'check':item.checked} "#}
-{#                                       @click="selectedProduct(item)">#}
-{#                                        <svg class="icon icon-ok">#}
-{#                                            <use xlink:href="#icon-ok"></use>#}
-{#                                        </svg>#}
-{#                                    </a>#}
-{#                                </div>#}
-{#                                <!--图片-->#}
-{#                                <div class="cart-item-pic">#}
-{#                                    <img v-bind:src="item.productImage" alt="">#}
-{#                                    <!--<img src="{{item.productImage}}" alt=""> 会在浏览器加载时 vue实例没有渲染完是，把它当作图片路径来加载-->#}
-{#                                </div>#}
-{#                                <!--图片后面的文字-->#}
-{#                                <div class="cart-item-title">#}
-{#                                    <div class="item-name">#}
-{#                                        {{ item.productName + "--我是index的值"+index }}#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                                <!-- 赠送-->#}
-{#                                <div class="item-include">#}
-{#                                    <dl>#}
-{#                                        <dt>赠送</dt>#}
-{#                                        <dd v-for="part in item.parts" v-text="part.partsName">#}
-{#                                            <!--也可以{{part.partsName}}--></dd>#}
-{#                                    </dl>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                            <!--第二列-->#}
-{#                            <div class="cart-tab-2">#}
-{#                                <!-- 过滤器的使用方法 | 加方法 -->#}
-{#                                <div class="item-price"> {{ item.productPrice | formatMoney }}</div>#}
-{#                            </div>#}
-{#                            <!--第三列-->#}
-{#                            <div class="cart-tab-3">#}
-{#                                <div class="item-quantity">#}
-{#                                    <div class="select-self select-self-open">#}
-{#                                        <div class="quentity">#}
-{#                                            <!-- 绑定事件 v-on：click 也可以 @click#}
-{#                                            调用方法的同时 我们需要把商品的对象传递过去 item#}
-{#                                             第二个参数 -1 减 1 加#}
-{#                                            -->#}
-{#                                            <a href="javascript:;" v-on:click=" changeMoney(item,-1)"> - </a>#}
-{#                                            <!--文本框 放入当前商品数量 v-model   -->#}
-{#                                            <input type="text" disabled v-model="item.productQuentity">#}
-{#                                            <a href="javascript:; " @click=" changeMoney(item,1) "> + </a>#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                    <div class="item-stock"> 有货</div>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                            <!--第四列-->#}
-{#                            <div class="cart-tab-4">#}
-{#                                <!-- 总金额是当前的单价乘以商品总数-->#}
-{#                                <div class="item-price-total">#}
-{#                                    {{ item.productPrice*item.productQuentity | formatMoney}}</div>#}
-{##}
-{#                            </div>#}
-{#                            <!--第五列-->#}
-{#                            <div class="cart-tab-5">#}
-{#                                <div class="cart-item-opration">#}
-{#                                    <a href="javascript:;" class="item-edit-btn" @click="delConfirm(item)">#}
-{#                                        <svg class="icon icon-del">#}
-{#                                            <use xlink:href="#icon-del"></use>#}
-{#                                        </svg>#}
-{#                                    </a>#}
-{#                                </div>#}
-{#                            </div>#}
-{##}
-{#                        </li>#}
-{#                    </ul>#}
-{#                </div>#}
-{#            </div>#}
 
-            <!--footer-->
-            <div class="cart-foot-wrap">
-                <!--footer 左边的-->
-                <div class="cart-foot-l">
-                    <div class="item-all-check">
-                        <a href="javascript:;">
-                            <!--v-bind:class 的简写  :class-->
-                            <span class="item-check-btn" :class="{'check': checkAllFlag}" @click="checkAll(true)">
-                                <svg class="icon icon-ok"><use xlink:href="#icon-ok"></use></svg>
-                            </span>
-                            <span @click="checkAll(true)"> 全选 </span>
-                        </a>
+                    <!--商品列表信息-->
+
+                                        <ul class="cart-item-list">
+                                            <li v-for="(item,index) in productList"> <!--item of productList 这两个是一样的-->
+                                                <!--
+                                                这块的 index 是让自己知道
+                                                这块的index 是表示索引的值 和 js原声的 forEach(function(value,index){ }) 是一样的
+                                                jq的 $.each(function(index ,value ){ }) 和它们是相反的
+                                                -->
+                                                <div class="cart-tab-1">
+                                                    <div class="cart-item-check">
+                                                        <!--v-bind:class="" 里面一定是 一个对象或者是数组的形式
+                                                         v-bind:class="{ }"  v-bind:class="[ ]"
+                                                         -->
+                                                        <a href="javascript:;" class="item-check-btn" v-bind:class="{'check':item.checked} "
+                                                           @click="selectedProduct(item)">
+                                                            <svg class="icon icon-ok">
+                                                                <use xlink:href="#icon-ok"></use>
+                                                            </svg>
+                                                        </a>
+                                                    </div>
+                                                    <!--图片-->
+                                                    <div class="cart-item-pic">
+                                                        <img v-bind:src="item.productImage" alt="">
+                                                        <!--<img src="{{item.image}}" alt=""> 会在浏览器加载时 vue实例没有渲染完是，把它当作图片路径来加载-->
+                                                    </div>
+                                                    <!--图片后面的文字-->
+{#                                                    <div class="cart-item-title">#}
+{#                                                        <div class="item-name">#}
+{#                                                            {{ item.productName + "--我是index的值"+index }}#}
+{#                                                        </div>#}
+{#                                                    </div>#}
+                                                    <!-- 赠送-->
+                                                    <div class="item-include">
+                                                        <dl>
+                                                            <dt>赠送</dt>
+                                                            <dd v-for="part in item.parts" v-text="part.partsName">
+                                                                <!--也可以{{part.partsName}}--></dd>
+                                                        </dl>
+                                                    </div>
+                                                </div>
+                                                <!--第二列-->
+                                                <div class="cart-tab-2">
+                                                    <!-- 过滤器的使用方法 | 加方法 -->
+{#                                                    <div class="item-price"> {{ item.productPrice | formatMoney }}</div>#}
+                                                    <div class="item-price"> {{ item.productPrice  }}</div>
+                                                </div>
+                                                <!--第三列-->
+                                                <div class="cart-tab-3">
+                                                    <div class="item-quantity">
+                                                        <div class="select-self select-self-open">
+                                                            <div class="quentity">
+                                                                <!-- 绑定事件 v-on：click 也可以 @click
+                                                                调用方法的同时 我们需要把商品的对象传递过去 item
+                                                                 第二个参数 -1 减 1 加
+                                                                -->
+                                                                <a href="javascript:;" v-on:click=" changeMoney(item,-1)"> - </a>
+                                                                <!--文本框 放入当前商品数量 v-model   -->
+                                                                <input type="text" disabled v-model="item.productQuentity">
+                                                                <a href="javascript:; " @click=" changeMoney(item,1) "> + </a>
+                                                            </div>
+                                                        </div>
+                                                        <div class="item-stock"> 有货</div>
+                                                    </div>
+                                                </div>
+                                                <!--第四列-->
+                                                <div class="cart-tab-4">
+                                                    <!-- 总金额是当前的单价乘以商品总数-->
+                                                    <div class="item-price-total">
+{#                                                        {{ item.productPrice*item.productQuentity | formatMoney}}</div>#}
+{#                                                        {{ item.productPrice*item.productQuentity }}</div>#}
+
+
+                                                </div>
+                                                <!--第五列-->
+                                                <div class="cart-tab-5">
+                                                    <div class="cart-item-opration">
+                                                        <a href="javascript:;" class="item-edit-btn" @click="delConfirm(item)">
+                                                            <svg class="icon icon-del">
+                                                                <use xlink:href="#icon-del"></use>
+                                                            </svg>
+                                                        </a>
+                                                    </div>
+                                                </div>
+
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <!--footer-->
+                                <div class="cart-foot-wrap">
+                                    <!--footer 左边的-->
+                                    <div class="cart-foot-l">
+                                        <div class="item-all-check">
+                                            <a href="javascript:;">
+                                                <!--v-bind:class 的简写  :class-->
+                                                <span class="item-check-btn" :class="{'check': checkAllFlag}" @click="checkAll(true)">
+                                                    <svg class="icon icon-ok"><use xlink:href="#icon-ok"></use></svg>
+                                                </span>
+                                                <span @click="checkAll(true)"> 全选 </span>
+                                            </a>
+                                        </div>
+                                        <div class="item-all-del">
+                                            <a href="javascript:;" @click="checkAll(false)"> 取消全选</a>
+                                        </div>
+                                    </div>
+                                    <!--footer 右边的-->
+{#                    <div class="cart-foot-r">#}
+                        <div class="item-total">
+                            总价：<span class="total-price"> {{ totalPrice }}</span>
+                        </div>
+                        <div class="next-btn-wrap">
+                            <a href="/home/address" class="btn btn--red"> 结账 </a>
+                        </div>
+
+                    {#            </div>#}
+                    {#        </div>#}
+                    {#    </div>#}
+
+                    <!--模态框-->
+                    <div class="md-modal modal-msg md-modal-transtion " id="showModal" :class="{'md-show': delFlag}">
+                        <div class="md-modal-inner">
+                            <div class="md-top">
+
+                                <button class="md-close" @click="delFlag= false"> 关闭</button>
+                            </div>
+                            <div class="md-content">
+                                <div class="confirm-tips">
+                                    <p id="cusLanInfo" lan="Cart.Del.Confirm">你确认删除此订单信息吗?</p>
+                                </div>
+                                <div class="btn-wrap col-2">
+                                    <button class="btn btn--m" id="btnModalConfirm" @click=" delProduct()"> YES</button>
+                                    <button class="btn btn--m  btn--red" id="btnModalCancel" @click=" delFlag = false">
+                                        NO
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="item-all-del">
-                        <a href="javascript:;" @click="checkAll(false)"> 取消全选</a>
-                    </div>
-                </div>
-                <!--footer 右边的-->
-                <div class="cart-foot-r">
-                    <div class="item-total">
-                        总价：<span class="total-price"> {{ totalPrice}}</span>
-                    </div>
-                    <div class="next-btn-wrap">
-                        <a href="address.html" class="btn btn--red"> 结账 </a>
-                    </div>
+                    <!--遮罩层-->
+                    <div class="md-overlay" id="showOverLay" v-if=" delFlag"></div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!--模态框-->
-    <div class="md-modal modal-msg md-modal-transtion " id="showModal" :class="{'md-show': delFlag}">
-        <div class="md-modal-inner">
-            <div class="md-top">
-                <button class="md-close" @click="delFlag= false"> 关闭</button>
-            </div>
-            <div class="md-content">
-                <div class="confirm-tips">
-                    <p id="cusLanInfo" lan="Cart.Del.Confirm">你确认删除此订单信息吗?</p>
-                </div>
-                <div class="btn-wrap col-2">
-                    <button class="btn btn--m" id="btnModalConfirm" @click=" delProduct()"> YES</button>
-                    <button class="btn btn--m  btn--red" id="btnModalCancel" @click=" delFlag = false"> NO</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--遮罩层-->
-    <div class="md-overlay" id="showOverLay" v-if=" delFlag"></div>
 </div>
 </body>
 </html>
