--- a/templates/products.html
+++ b/templates/products.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="header-top">
                     <div class="logo">
-                        <a href="index.html">N-AIR</a>
+                        <a href="home.html">N-AIR</a>
                     </div>
                     <div class="login-bars">
                         <a class="btn btn-default log-bar" href="register.html" role="button">Sign up</a>
@@ -166,7 +166,7 @@
         <div class="head-bread">
             <div class="container">
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li class="active">PRODUCTS</li>
                 </ol>
             </div>
@@ -613,7 +613,7 @@
                 <div class="col-md-2 re-ft-grd">
                     <div class="bt-logo">
                         <div class="logo">
-                            <a href="index.html" class="ft-log">N-AIR</a>
+                            <a href="home.html" class="ft-log">N-AIR</a>
                         </div>
                     </div>
                 </div>
